# deskdogocode

./: package.json
.github/workflows/: build.yml
built/: common-sim.d.ts  sim.d.ts  target.js  target.json
built/packaged/: asseteditor.html  codeembed.html  docs.html  embed.js  index.html  kiosk.html  multi.html  multiplayer.html  release.manifest  run.html  serviceworker.js  siminstructions.html  skillmap.html  target.js  target.json  teachertool.html  tutorialtool.html
built/packaged/docs/: SUMMARY.html  about.html  behind-the-makecode-hardware.html  block-gallery.html  blocks-embed.html  blocks.html  browsers.html  cli.html  code.html  coding-cards.html  coding-for-teachers.html  contact.html  courses.html  deep-dive.html  device.html  docs.html  examples.html  experiments.html  extensions.html  faq.html  fcp.html  github.html  hero-banner.html  hidflash.html  homepage-content.html  jacdac.html  javascript.html  lessons.html  live-coding.html  microcode.html  multiplayer.html  offline-app.html  offline.html  online-learning.html  open-source.html  projects.html  python.html  raspberry-pi.html  reference.html  release-tests.html  (+14 more)
built/packaged/docs/about/: editor-features.html
built/packaged/docs/blocks/: comments.html  custom.html  javascript-blocks.html  logic.html  loops.html  math.html  on-start.html  pause-until.html  variables.html
built/packaged/docs/browsers/: linux.html  mac.html  windows.html  (+2 more)
src-tauri/: Cargo.toml  myapp.key.b64  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  update.html
(+979 files in other folders)
