[package]
name = "deskdogocode"
version = "1.0.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "deskdogocode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["updater"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }